# backend/src/main/java/br/com/gabryel/maplewood/controller/StudentController.java
@@ -1,6 +1,7 @@
 package br.com.gabryel.maplewood.controller;
 
 import br.com.gabryel.maplewood.api.StudentsApi;
+import br.com.gabryel.maplewood.api.model.EligiblePageResponse;
 import br.com.gabryel.maplewood.api.model.SemesterSeason;
 import br.com.gabryel.maplewood.api.model.StudentPageResponse;
 import br.com.gabryel.maplewood.api.model.StudentResponse;
@@ -12,6 +13,8 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+
+import static org.springframework.http.HttpStatus.OK;
 
 @RestController
 @RequiredArgsConstructor
@@ -25,9 +28,21 @@ public class StudentController implements StudentsApi {
     }
 
     @Override
-    public ResponseEntity<StudentScheduleResponse> getStudentSchedule(Integer id, Integer year, SemesterSeason semesterType) {
+    public ResponseEntity<StudentScheduleResponse> getStudentSchedule(Integer studentId, Integer year, SemesterSeason semesterType) {
         var semesterCore = SemesterType.valueOf(semesterType.name());
-        return ResponseEntity.ok(studentService.getStudentSchedule(id, year, semesterCore));
+        return ResponseEntity.ok(studentService.getStudentSchedule(studentId, year, semesterCore));
+    }
+
+    @Override
+    public ResponseEntity<EligiblePageResponse> getEligibleCourses(Integer studentId, Integer year, SemesterSeason semester) {
+        var semesterCore = SemesterType.valueOf(semester.name());
+        return ResponseEntity.ok(studentService.getAvailableCourses(studentId, year, semesterCore));
+    }
+
+    @Override
+    public ResponseEntity<Void> enrollStudent(Integer studentId, Integer sectionId) {
+        studentService.enrollStudent(studentId, sectionId);
+        return ResponseEntity.status(OK).build();
     }
 
     private StudentPageResponse toResponse(Page<StudentResponse> page) {
